# openvslam

./: .clang-format  .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Dockerfile.desktop  Dockerfile.ros  Dockerfile.socket  LICENSE  README.md  build.sh  build_app.ps1  build_ros.sh  download_dataset.sh  gps_client_backup.txt  wercker.yml
cmake/: Config.cmake.in  (+3 more)
example/: CMakeLists.txt  gps_slam_fusion.cc  gps_slam_fusion_camera.cc  gps_slam_fusion_video.cc  gps_video_record.cc  run_camera_calibration.cc  run_camera_localization.cc  run_camera_slam.cc  run_euroc_slam.cc  run_image_localization.cc  run_image_slam.cc  run_kitti_slam.cc  run_kitti_slam_rgbd.cc  run_movie_localization.cc  run_movie_slam.cc  run_rs_camera_slam.cc  run_rs_rgbd_slam.cc  run_tum_rgbd_slam.cc  run_tum_slam.cc  run_video_calibration.cc  run_video_localization.cc  run_video_slam.cc
example/euroc/: EuRoC_mono.yaml  EuRoC_stereo.yaml  TUM_VI_fisheyestereo.yaml  TUM_VI_mono.yaml  TUM_VI_stereo.yaml
example/fusion/: gps_network.cc  gps_network.h  gps_parser.cc  gps_parser.h  time_sync.cc  time_sync.h
example/gopro/: gopro.yaml
example/kitti/: KITTI_mono_00-02.yaml  KITTI_mono_03.yaml  KITTI_mono_04-12.yaml  KITTI_mono_04-12_rgbd.yaml  KITTI_mono_13.yaml  KITTI_stereo_00-02.yaml  KITTI_stereo_03.yaml  KITTI_stereo_04-12.yaml
example/realsense/: rsD435_mono.yaml  rsD435_rgbd.yaml
example/tum/: TUM_RGBD_01.yaml  TUM_RGBD_02.yaml  TUM_RGBD_03.yaml  TUM_mono_01.yaml  TUM_mono_02.yaml  TUM_mono_03.yaml
example/tum_rgbd/: TUM_RGBD_mono_1.yaml  TUM_RGBD_mono_2.yaml  TUM_RGBD_mono_3.yaml  TUM_RGBD_rgbd_1.yaml  TUM_RGBD_rgbd_2.yaml  TUM_RGBD_rgbd_3.yaml
example/tum_vi/: TUM_VI_mono.yaml  TUM_VI_stereo.yaml
example/util/: euroc_util.cc  euroc_util.h  image_util.cc  image_util.h  kitti_util.cc  kitti_util.h  kitti_util_rgbd.cc  kitti_util_rgbd.h  tum_rgbd_util.cc  tum_rgbd_util.h  tum_util.cc  tum_util.h
ros/src/openvslam/: CMakeLists.txt  package.xml
ros/src/publisher/: CMakeLists.txt
src/openvslam/: CMakeLists.txt  config.cc  config.h  global_optimization_module.cc  global_optimization_module.h  mapping_module.cc  mapping_module.h  system.cc  system.h  tracking_module.cc  tracking_module.h  type.h
src/openvslam/camera/: CMakeLists.txt  base.cc  base.h  division_undistortion.cc  division_undistortion.h  equirectangular.cc  equirectangular.h  fisheye.cc  fisheye.h  perspective.cc  perspective.h  radial_division.cc  radial_division.h
src/openvslam/cuda/: mat_norm.cu  mat_norm.hpp  stereo_matches.cu  stereo_matches.hpp
src/openvslam/data/: CMakeLists.txt  bow_database.cc  bow_database.h  bow_vocabulary.h  camera_database.cc  camera_database.h  common.cc  common.h  frame.cc  frame.h  frame_statistics.cc  frame_statistics.h  graph_node.cc  graph_node.h  keyframe.cc  keyframe.h  landmark.cc  landmark.h  map_database.cc  map_database.h
src/openvslam/feature/: CMakeLists.txt  orb_extractor.cc  orb_extractor.h  orb_extractor_node.cc  orb_extractor_node.h  orb_params.cc  orb_params.h  orb_point_pairs.h
src/openvslam/helper/: CMakeLists.txt  FindType.hpp  SGFilter.hpp  Utils.hpp  cv-helpers.hpp  parallel_for_thread.hpp
src/openvslam/initialize/: CMakeLists.txt  base.cc  base.h  bearing_vector.cc  bearing_vector.h  initializer.cc  initializer.h  perspective.cc  perspective.h
src/openvslam/io/: CMakeLists.txt  map_database_io.cc  map_database_io.h  trajectory_io.cc  trajectory_io.h
src/openvslam/map/: keyframe_inserter.cc  keyframe_inserter.h  local_map_cleaner.cc  local_map_cleaner.h  local_mapper.cc  local_mapper.h  loop_bundle_adjuster.cc  loop_bundle_adjuster.h  loop_closer.cc  loop_closer.h  loop_detector.cc  loop_detector.h  relocalizer.cc  relocalizer.h  two_view_triangulator.cc  two_view_triangulator.h  type.h
src/openvslam/match/: CMakeLists.txt  angle_checker.h  area.cc  area.h  base.h  bow_tree.cc  bow_tree.h  fisheye_stereo.cc  fisheye_stereo.h  fuse.cc  fuse.h  projection.cc  projection.h  robust.cc  robust.h  stereo.cc  stereo.h
src/openvslam/module/: CMakeLists.txt  frame_tracker.cc  frame_tracker.h  initializer.cc  initializer.h  keyframe_inserter.cc  keyframe_inserter.h  local_map_cleaner.cc  local_map_cleaner.h  local_map_updater.cc  local_map_updater.h  loop_bundle_adjuster.cc  loop_bundle_adjuster.h  loop_detector.cc  loop_detector.h  relocalizer.cc  relocalizer.h  two_view_triangulator.cc  two_view_triangulator.h  type.h
src/openvslam/optimize/: CMakeLists.txt  global_bundle_adjuster.cc  global_bundle_adjuster.h  graph_optimizer.cc  graph_optimizer.h  local_bundle_adjuster.cc  local_bundle_adjuster.h  pose_optimizer.cc  pose_optimizer.h  transform_optimizer.cc  transform_optimizer.h
src/openvslam/publish/: CMakeLists.txt  frame_publisher.cc  frame_publisher.h  map_publisher.cc  map_publisher.h
src/openvslam/publisher/: frame_publisher.cc  frame_publisher.h  map_publisher.cc  map_publisher.h
src/openvslam/solve/: CMakeLists.txt  common.cc  common.h  essential_solver.cc  essential_solver.h  fundamental_solver.cc  fundamental_solver.h  homography_solver.cc  homography_solver.h  pnp_solver.cc  pnp_solver.h  sim3_solver.cc  sim3_solver.h  triangulator.h
src/openvslam/solver/: common.cc  common.h  essential_solver.cc  essential_solver.h  fundamental_solver.cc  fundamental_solver.h  homography_solver.cc  homography_solver.h  pnp_solver.cc  pnp_solver.h  sim3_solver.cc  sim3_solver.h  triangulator.h
src/openvslam/track/: frame_tracker.cc  frame_tracker.h  tracker.cc  tracker.h
src/openvslam/util/: CMakeLists.txt  converter.cc  converter.h  fancy_index.h  image_converter.cc  image_converter.h  random_array.cc  random_array.h  stereo_rectifier.cc  stereo_rectifier.h  string.h
src/pangolin_viewer/: CMakeLists.txt  color_scheme.cc  color_scheme.h  viewer.cc  viewer.h
src/socket_publisher/: CMakeLists.txt  data_serializer.cc  data_serializer.h  publisher.cc  publisher.h  socket_client.cc  socket_client.h
test/: CMakeLists.txt
test/helper/: CMakeLists.txt  bearing_vector.cc  bearing_vector.h  keypoint.cc  keypoint.h  landmark.cc  landmark.h
(+142 files in other folders)
